fixed padding-top for article dates on big screens

--- a/Home/home.html
+++ b/Home/home.html
@@ -132,7 +132,7 @@
               <div class="card__content-col1">
                 <img class="card__article-img" src="../img/deco.jpg" />
                 <!-- only appears on bigScreen -->
-                <small class="card__date padding-0 big-screen"
+                <small class="card__date big-screen"
                   >July 23, 2019 | 3 comments</small
                 >
               </div>
